1. 支持文件夹拖拽上传 2. 补充git功能-读取仓库，commit，pull，push